# RAG_Application

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  db.py  docker-compose.yml  gemini_service.py  ingestion.py  main.py  pyproject.toml  requirements.txt  retrieval.py  schema.py
